# navidrome_plugin_local_agent

./: .gitignore  Cargo.toml  README.md  build-ndp.sh  manifest.json  plugin_local_agent.ndp
src/: lib.rs
